[gd_scene load_steps=42 format=2]

[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Bosses/BossStun.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/dps_hud.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Bosses/Vile/vile.res" type="SpriteFrames" id=6]
[ext_resource path="res://src/Actors/Bosses/Vile/Intro.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Bosses/Vile/VileDash.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Bosses/Vile/VileJump.gd" type="Script" id=9]
[ext_resource path="res://src/Effects/Materials/x_dash_smoke.tres" type="Material" id=10]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Idle.gd" type="Script" id=11]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture" id=12]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=13]
[ext_resource path="res://src/Actors/Bosses/Vile/VileMissiles.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Bosses/Vile/FirePillar.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Actors/Bosses/Vile/VileDefeat.gd" type="Script" id=16]
[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=17]
[ext_resource path="res://src/Sounds/56 - MMX - Enemy Death.wav" type="AudioStream" id=18]
[ext_resource path="res://src/Effects/Materials/RemainsParticleSingleExplosion.tres" type="Material" id=19]
[ext_resource path="res://src/Sounds/18 - MMX - X Fade Out.wav" type="AudioStream" id=20]
[ext_resource path="res://src/DialogSystem/Dialogs/Stages/Vile_miniboss_Dialogue.tres" type="Resource" id=21]
[ext_resource path="res://src/Sounds/Vile - Defeat.ogg" type="AudioStream" id=22]
[ext_resource path="res://src/Sounds/17 - MMX - X Fade In.wav" type="AudioStream" id=23]
[ext_resource path="res://src/Actors/Bosses/Vile/VileMissile.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/Sounds/60 - MMX - Enemy Missile Fire.wav" type="AudioStream" id=25]
[ext_resource path="res://src/Sounds/LEMON_SHOT2.wav" type="AudioStream" id=26]
[ext_resource path="res://src/Actors/Bosses/Vile/VileCannon.gd" type="Script" id=27]
[ext_resource path="res://src/Actors/Bosses/Vile/CannonShot.tscn" type="PackedScene" id=28]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=29]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=30]
[ext_resource path="res://src/Sounds/Rooster - Lowkick.ogg" type="AudioStream" id=31]
[ext_resource path="res://src/Sounds/Mantis - Dash.ogg" type="AudioStream" id=32]
[ext_resource path="res://src/Sounds/Mantis - Dash2.ogg" type="AudioStream" id=33]
[ext_resource path="res://src/AchievementSystem/VileAchievementUnlocker.gd" type="Script" id=34]
[ext_resource path="res://src/Actors/Bosses/Vile/RNGUpdate.gd" type="Script" id=35]

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 12, 24 )

[sub_resource type="RectangleShape2D" id=64]
extents = Vector2( 14, 16 )

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 8, 16 )

[sub_resource type="CanvasItemMaterial" id=65]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 8, 8 )

[sub_resource type="CanvasItemMaterial" id=66]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[node name="Vile" type="KinematicBody2D" groups=["Bosses", "Enemies"]]
z_index = 5
collision_layer = 8
script = ExtResource( 13 )
max_health = 100.0

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 3 )
time_between_attacks = Vector2( 0.1, 0.25 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 62 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 29 )
position = Vector2( 0, -19 )
z_index = 1
frames = ExtResource( 6 )
animation = "idle"
playing = true

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 7 )
debug_logs = true
actions = [ "Event" ]
animation = "beam_in"
dialogue = ExtResource( 21 )

[node name="beam_in" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 23 )
volume_db = -11.0
pitch_scale = 0.8
max_distance = 600.0
bus = "SFX"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 11 )
conflicting_moves = [ "Anything" ]
animation = "laugh"

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 2 )
invulnerability_time = 0.1
max_flash_time = 0.35
weakenesses = [ "DriftDiamond", "RideArmor", "IceGattling", "Hyouryuushou" ]

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 30 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="dps" type="RichTextLabel" parent="Damage"]
margin_left = -18.0
margin_top = -69.0
margin_right = 59.0
margin_bottom = -52.0
text = "0.0"
script = ExtResource( 5 )

[node name="area2D" type="Area2D" parent="Damage"]
position = Vector2( 0, -11 )
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="Damage/area2D"]
position = Vector2( 1, 8 )
shape = SubResource( 64 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 1 )
damage = 4.0

[node name="area2D" type="Area2D" parent="DamageOnTouch"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="DamageOnTouch/area2D"]
position = Vector2( 1, 7 )
shape = SubResource( 67 )

[node name="BossStun" type="Node2D" parent="."]
script = ExtResource( 4 )
conflicting_moves = [ "BossDeath" ]
actions = [ "Event" ]
animation = "defeat_fall"
horizontal_velocity = 120.0
jump_velocity = 150.0

[node name="VileJump" type="Node2D" parent="."]
position = Vector2( 0, 26 )
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
actions = [ "Event" ]
animation = "jump_prepare"
horizontal_velocity = 250.0
jump_velocity = 450.0
projectile = ExtResource( 15 )

[node name="land_particles" type="Particles2D" parent="VileJump"]
material = SubResource( 65 )
position = Vector2( 0, -2 )
z_index = 1
emitting = false
amount = 11
lifetime = 0.75
local_coords = false
process_material = ExtResource( 10 )
texture = ExtResource( 12 )

[node name="land" type="AudioStreamPlayer2D" parent="VileJump"]
stream = ExtResource( 31 )
volume_db = -9.0
pitch_scale = 1.6
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="jump" type="AudioStreamPlayer2D" parent="VileJump"]
stream = ExtResource( 33 )
volume_db = -8.476
pitch_scale = 1.15
max_distance = 1200.0
bus = "SFX"

[node name="shot_sound" type="AudioStreamPlayer2D" parent="VileJump"]
stream = ExtResource( 25 )
volume_db = -9.0
pitch_scale = 1.6
max_distance = 1200.0
bus = "SFX"

[node name="VileDash" type="Node2D" parent="."]
script = ExtResource( 8 )
actions = [ "Event" ]
animation = "dash_start"
horizontal_velocity = 400.0

[node name="dash_particles" type="Particles2D" parent="VileDash"]
material = SubResource( 65 )
position = Vector2( 0, 24 )
z_index = 1
emitting = false
amount = 11
lifetime = 0.75
local_coords = false
process_material = ExtResource( 10 )
texture = ExtResource( 12 )

[node name="dash" type="AudioStreamPlayer2D" parent="VileDash"]
stream = ExtResource( 32 )
volume_db = -8.0
pitch_scale = 0.8
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="VileCannon" type="Node2D" parent="."]
position = Vector2( 31, -5 )
script = ExtResource( 27 )
__meta__ = {
"_editor_description_": ""
}
actions = [ "Event" ]
animation = "cannon_prepare"
projectile = ExtResource( 28 )
shots = 9
initial_speed = Vector2( 300, 300 )
shoot_towards_player = true

[node name="shot_sound" type="AudioStreamPlayer2D" parent="VileCannon"]
stream = ExtResource( 26 )
volume_db = -12.079
pitch_scale = 0.84
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="VileMissiles" type="Node2D" parent="."]
position = Vector2( 0, -5 )
script = ExtResource( 14 )
__meta__ = {
"_editor_description_": ""
}
actions = [ "Event" ]
animation = "missile_prepare"
projectile = ExtResource( 24 )
shots = 3
initial_speed = Vector2( 130, 130 )

[node name="shot_sound" type="AudioStreamPlayer2D" parent="VileMissiles"]
stream = ExtResource( 25 )
volume_db = -6.0
pitch_scale = 0.9
max_distance = 1200.0
bus = "SFX"

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 1, 15 )
shape = SubResource( 63 )

[node name="BossDeath" type="Node2D" parent="."]
script = ExtResource( 16 )
debug_logs = true
actions = [ "Event" ]
animation = "defeat_fall"
jump_velocity = 180.0

[node name="explosion" type="AudioStreamPlayer2D" parent="BossDeath"]
pause_mode = 2
stream = ExtResource( 18 )
volume_db = -0.553
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[node name="sparks" type="AudioStreamPlayer2D" parent="BossDeath"]
pause_mode = 2
stream = ExtResource( 22 )
volume_db = -2.229
pitch_scale = 1.05
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[node name="explosion_particles" type="Particles2D" parent="BossDeath"]
pause_mode = 2
material = SubResource( 66 )
position = Vector2( 0, 0.5 )
z_index = 10
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
local_coords = false
process_material = ExtResource( 19 )
texture = ExtResource( 17 )

[node name="beam_out" type="AudioStreamPlayer2D" parent="BossDeath"]
stream = ExtResource( 20 )
volume_db = -6.555
max_distance = 600.0
bus = "SFX"

[node name="VileAchievementUnlocker" type="Node" parent="."]
script = ExtResource( 34 )

[node name="RNGUpdate" type="Node" parent="."]
script = ExtResource( 35 )

[connection signal="dps" from="Damage" to="Damage/dps" method="_on_Damage_dps"]
[connection signal="ability_start" from="BossDeath" to="RNGUpdate" method="_on_BossDeath_ability_start"]
